--- a/frontend/projects/chessmate-app/src/index.html
+++ b/frontend/projects/chessmate-app/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <link rel="stylesheet" id="app-theme" type="text/css" href="theme-bootstrap4-dark-purple.css" />
 </head>
 <body>
   <app-root></app-root>
